--- a/service/service_cmn/src/main/resources/application.properties
+++ b/service/service_cmn/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.14.30.217:3306/yygh_cmn?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone = GMT&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://192.168.153.128:3306/yygh_cmn?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone = GMT&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=dir99
+spring.datasource.password=123456
 
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -28,6 +28,9 @@ spring.redis.lettuce.pool.max-wait=-1
 #????????(???????)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
+
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #??mapper xml?????
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
