--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.153.128:3306/yygh_hosp?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone = GMT&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=dir99
+spring.datasource.password=123456
 
 
 #redis??
@@ -31,6 +31,9 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/yygh_hosp
+
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #??mapper xml?????
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
