--- a/server_gateway/src/main/resources/application.properties
+++ b/server_gateway/src/main/resources/application.properties
@@ -50,3 +50,18 @@ spring.cloud.gateway.routes[5].id=service-oss
 spring.cloud.gateway.routes[5].uri=lb://service-oss
 #??????,??servicerId?auth-service?/auth/??
 spring.cloud.gateway.routes[5].predicates= Path=/*/oss/**
+
+#????id
+spring.cloud.gateway.routes[6].id=service-order
+#?????uri
+spring.cloud.gateway.routes[6].uri=lb://service-order
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[6].predicates= Path=/*/order/**
+
+# statistics
+#????id
+spring.cloud.gateway.routes[7].id=service-statistics
+#?????uri
+spring.cloud.gateway.routes[7].uri=lb://service-statistics
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[7].predicates= Path=/*/statistics/**
