--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>service-client</artifactId>
     <modules>
         <module>service-cmn-client</module>
+        <module>service-user-client</module>
+        <module>service-hosp-client</module>
+        <module>service-order-client</module>
     </modules>
 
     <properties>
