--- a/service/pom.xml
+++ b/service/pom.xml
@@ -17,6 +17,9 @@
         <module>service_cmn</module>
         <module>service_msm</module>
         <module>service_oss</module>
+        <module>service_order</module>
+        <module>service_task</module>
+        <module>service_statistics</module>
     </modules>
 
     <properties>
