--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #spring.data.mongodb.database=yygh_hosp
 
 #rabbitmq??
-#spring.rabbitmq.host=127.0.0.1
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+spring.rabbitmq.host=192.168.153.128
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
