--- a/service/service_msm/pom.xml
+++ b/service/service_msm/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>java-sms-sdk</artifactId>
             <version>1.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>rabbit_util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
