--- a/service/service_msm/src/main/resources/application.properties
+++ b/service/service_msm/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.redis.lettuce.pool.min-idle=0
   
   # nacos????
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#rabbitmq??
+spring.rabbitmq.host=192.168.153.128
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
